<resources>
    <string name="app_name">RUNNER"'"S Hi</string>
    <string name="title_activity_rec_detail">RecDetailActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_badge_detail">BadgeDetailActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="text">페이스</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="what_is_running_level"><u>러닝레벨이 무엇인가요?</u></string>
    <string name="naver_id">6t807pncgs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title_text">나른한 오후,\n당신의 상대를\n찾아 함께 뛰어 보세요.</string>
    <string name="logout">로그아웃</string>
    <string name="level">Lv.</string>
    <string name="score">Score</string>
    <string name="win_lose">%s승 %s패</string>
    <string name="kilometer">킬로미터</string>
    <string name="pace">페이스</string>
    <string name="custom_pace">%s`%s``</string>
    <string name="km">%s km</string>
    <string name="average_pace">평균 페이스</string>
    <string name="running_time">러닝시간</string>
    <string name="srecord">%s의 기록</string>
    <string name="date_running">%d월 %d일의 러닝</string>
    <string name="time_to_time">%s - %s</string>
    <string name="ranking_heavy_runner_title">이달의 러너</string>
    <string name="ranking_heavy_runner_desc">10월 한 달 가장 많이 달린 러너</string>
    <string name="ranking_winning_runner_title">명예의 전당</string>
    <string name="ranking_winning_runner_desc">10월 한 달 가장 많은 승리를 거둔 러너</string>
    <string name="ranking_losing_runner_title">졌.잘.싸</string>
    <string name="ranking_losing_runner_desc">10월 한 달 아쉽게 졌지만 열심히 러닝한 러너</string>
    <string name="network_error">접속이 지연되고 있습니다.\n네트워크 연결 상태를 확인해 주세요!</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="signup_tos_title"> 러너스하이 이용약관에\n 동의해주세요.</string>
    <string name="signup_tos_all_agree">모두 동의 (선택 정보 포함)</string>
    <string name="signup_tos_agree">[필수] 이용 약관 동의</string>
    <string name="signup_tos_privacy_agree">[필수] 개인정보 처리방침 동의</string>
    <string name="signup_tos_marketing_agree">[선택] 광고성 정보 수신 및 마케팅 활용 동의</string>
    <string name="signup_see">보기</string>
    <string name="signup_next">다음</string>
    <string name="signup_idpasswd_title"> 아이디와 비밀번호를\n입력해 주세요.</string>
    <string name="signup_id">아이디</string>
    <string name="signup_id_hint">아이디를 입력하세요</string>
    <string name="signup_id_error">4-15자 영문, 숫자를 사용하세요.</string>
    <string name="signup_passwd">비밀번호</string>
    <string name="signup_passwd_hint">8-16자 영문/대/소문자/숫자/특수문자를 사용하세요.</string>
    <string name="signup_passwd_error">8-16자 영문/대/소문자/숫자/특수문자를 사용하세요.</string>
    <string name="signup_passwd_confirm">비밀번호 확인</string>
    <string name="signup_passwd_confirm_hint">비밀번호를 다시 확인해주세요.</string>
    <string name="signup_passwd_confirm_error">비밀번호를 다시 확인해주세요.</string>
    <string name="signup_duplicate_check">중복확인</string>
    <string name="signup_runningtype_title">러너스하이를 위한 \n여러분의 러닝 타입을 적어 주세요!</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_nickname_hint">2-6자를 입력해주세요.</string>
    <string name="signup_nickname_error">2-6자 한/영/숫자를 사용하세요.</string>
    <string name="signup_lv">본인이 생각하는 나의 러닝 레벨은?</string>
    <string name="signup_what_is_lv">러닝레벨이 무엇인가요?</string>
    <string name="signup_lv_low">초급</string>
    <string name="signup_lv_middle">중급</string>
    <string name="signup_lv_high">고급</string>
    <string name="signup_gender">당신의 성별은?</string>
    <string name="signup_gender_man">남성</string>
    <string name="signup_gender_woman">여성</string>
    <string name="signup_start">러너스하이 시작하기</string>
    <string name="signup_reveal">프로필 / 러닝 기록 공개설정</string>
    <string name="signup_reveal_desc">‘공개’를 선택해야 러너 랭킹 산정에 포함될 수 있어요.</string>
    <string name="signup_reveal_yes">공개</string>
    <string name="signup_reveal_no">비공개</string>
    <string-array name="level">
        <item>초급</item>
        <item>중급</item>
        <item>고급</item>
    </string-array>
    <string-array name="badge_title">
        <item>첫승 달성</item>
        <item>10승 달성</item>
        <item>50승 달성</item>
        <item>최고 페이스</item>
        <item>최장 거리</item>
        <item>최저 페이스</item>
        <item>50시간 달성</item>
        <item>100시간 달성</item>
        <item>150시간 달성</item>
        <item>10일 연속 러닝</item>
        <item>연속 5승</item>
        <item>연속 10승</item>
    </string-array>
</resources>