<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_back" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/dot_blue" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/dot_gray" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="7dp"
        android:layout_height="7dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/dot_blue" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nanumsquareb"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10sp"
        android:text="@string/signup_idpasswd_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_signup_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nanumsquareb"
        android:lineSpacingExtra="11sp"
        android:text="@string/signup_id"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/edt_signup_id"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/btn_signup_id_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:background="@drawable/blue_btn_background"
        android:lineSpacingExtra="11sp"
        android:paddingHorizontal="14dp"
        android:paddingVertical="14dp"
        android:text="@string/signup_duplicate_check"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/signup_guideline_right"
        app:layout_constraintTop_toTopOf="@+id/edt_signup_id" />


    <EditText
        android:id="@+id/edt_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginRight="8dp"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:paddingVertical="12dp"
        android:ems="10"
        android:inputType="textPersonName|textNoSuggestions"
        android:hint= "@string/signup_id_hint"
        android:fontFamily="@font/nanumsquarer"
        android:textColor="@color/brown_grey"
        android:singleLine="true"
        android:background="@drawable/grey_round_background"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup_id_confirm"
        app:layout_constraintStart_toStartOf="@+id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />

    <TextView
        android:id="@+id/tv_signup_id_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="13sp"
        android:text="@string/signup_id_error"
        android:textColor="@color/grapefruit"
        android:visibility="invisible"
        android:textSize="12sp"
        android:fontFamily="@font/nanumsquarer"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_signup_id" />

    <TextView
        android:id="@+id/tv_signup_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="11sp"
        android:text="@string/signup_passwd"
        android:fontFamily="@font/nanumsquareb"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id_error" />

    <EditText
        android:id="@+id/edt_signup_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/grey_round_background"
        android:ems="10"
        android:fontFamily="@font/nanumsquarer"
        android:inputType="textPassword|textNoSuggestions"
        android:paddingVertical="14dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:textColor="@color/brown_grey"
        android:textSize="14sp"
        android:hint="@string/signup_passwd_hint"
        app:layout_constraintEnd_toStartOf="@+id/signup_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw" />

    <TextView
        android:id="@+id/tv_signup_pw_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="13sp"
        android:fontFamily="@font/nanumsquarer"
        android:text="@string/signup_passwd_hint"
        android:textColor="@color/grapefruit"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_signup_pw" />

    <TextView
        android:id="@+id/tv_signup_pw_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="11sp"
        android:text="@string/signup_passwd_confirm"
        android:fontFamily="@font/nanumsquareb"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw_error" />

    <EditText
        android:id="@+id/edt_signup_pw_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/grey_round_background"
        android:ems="10"
        android:fontFamily="@font/nanumsquarer"
        android:inputType="textPassword|textNoSuggestions"
        android:paddingVertical="14dp"
        android:paddingLeft="12dp"
        android:singleLine="true"
        android:textColor="@color/brown_grey"
        android:textSize="14sp"
        android:hint= "@string/signup_passwd_confirm_hint"
        app:layout_constraintEnd_toStartOf="@+id/signup_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw_confirm" />

    <TextView
        android:id="@+id/tv_signup_pw_confirm_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="6dp"
        android:lineSpacingExtra="13sp"
        android:text="@string/signup_passwd_confirm_error"
        android:textColor="@color/grapefruit"
        android:fontFamily="@font/nanumsquarer"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/edt_signup_pw_confirm" />

    <TextView
        android:id="@+id/btn_signup_tos_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_very_light_pink_8"
        android:fontFamily="@font/nanumsquareb"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="15sp"
        android:padding="16dp"
        android:text="@string/signup_next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="@id/signup_guideline_right"
        app:layout_constraintStart_toStartOf="@id/signup_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw_confirm_error" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>